--- a/.github/workflows/notion-smoke.yml
+++ b/.github/workflows/notion-smoke.yml
@@ -1,21 +1,37 @@
 name: notion-smoke
-on: workflow_dispatch
+on:
+  workflow_dispatch: {}
+
 jobs:
-  run:
+  smoke:
     runs-on: ubuntu-latest
-        steps:
-      - run: |
-          test -n "${{ secrets.NOTION_TOKEN }}" || (echo "Missing token ❌"; exit 1)
+    steps:
+      - name: Check secrets + ping Notion API
+        env:
+          NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
+          NOTION_VERSION: ${{ secrets.NOTION_VERSION }}
+        shell: bash
+        run: |
+          # 1) secret present?
+          if [ -z "$NOTION_TOKEN" ]; then
+            echo "Missing NOTION_TOKEN ❌"; exit 1
+          fi
+
+          # 2) default version if not set
+          VERSION="${NOTION_VERSION:-2025-09-03}"
+
+          # 3) call Notion /search
           CODE=$(curl -sS -o /dev/null -w "%{http_code}" \
             -X POST "https://api.notion.com/v1/search" \
-            -H "Authorization: Bearer ${{ secrets.NOTION_TOKEN }}" \
-            -H "Notion-Version: ${{ secrets.NOTION_VERSION || '2025-09-03' }}" \
+            -H "Authorization: Bearer $NOTION_TOKEN" \
+            -H "Notion-Version: $VERSION" \
             -H "Content-Type: application/json" \
             --data '{"query":""}')
+
+          # 4) results
           if [ "$CODE" = "200" ]; then
-            echo "API reachable ✅"
+            echo "Token present ✅"
+            echo "API reachable ✅ (HTTP 200)"
           else
             echo "API check failed with HTTP $CODE ❌"; exit 1
           fi
-
-
